syntax = "proto3";
package canvas.canvas;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "canvas/x/canvas/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateCanvas(MsgCreateCanvas) returns (MsgCreateCanvasResponse);
  rpc Paint(MsgPaint) returns (MsgPaintResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateCanvas {
  string creator = 1;
  string id = 2;
  uint64 width = 3;
  uint64 height = 4;
  string refundDuration = 5;
  string allowDenomPrefix = 6;
  uint64 priceForPoint = 7;
}

message MsgCreateCanvasResponse {
  string gameIndex = 1;
}

message MsgPaint {
  string creator = 1;
  string id = 2;
  uint64 x = 3;
  uint64 y = 4;
  uint64 amount = 5;
}

message MsgPaintResponse {
  int32 x = 1;
  int32 y = 2;
}

// this line is used by starport scaffolding # proto/tx/message
